tests/sksl/errors/GrMainParameterWrongType.fp
void main(float3 coords) {
    sk_OutColor = half4(0);
}
